tests/ui/upgradeable_storage/fail/negative-key.stderr
error[E0600]: cannot apply unary operator `-` to type `u32`
  --> tests/ui/upgradeable_storage/fail/negative-key.rs:21:34
   |
21 | #[openbrush::upgradeable_storage(-123)]
   |                                  ^^^^ cannot apply unary operator `-`
   |
   = note: unsigned values cannot be negated
